adding lib link requirements to README